2007-02-27  Thatcher Ulrich <tu@tulrich.com>
	Remove dynamic_cast, using cast_to_* idiom.  Library clients
	should be able to choose whether or not to enable RTTI, therefore gameswf
	should not require it.
	* docs/AUTHORS: misc updates
	* gameswf/gameswf.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_as_classes/as_db(cpp,h)
	* gameswf/gameswf_as_classes/as_netstream(cpp,h)
	* gameswf/gameswf_as_classes/as_table(cpp,h)
	* gameswf/gameswf_video_impl(cpp,h)

2007-02-27  Thatcher Ulrich <tu@tulrich.com>
	Fixes for the Makefile
	* gameswf/config: adjusted c/c++ build rule to specify the object directory
	  (so source files can live in subdirectories of the Makefile dir)
	* gameswf/Makefile: added new source files from Vitaly
	* gameswf/gameswf_test_ogl.cpp: disable logo & progress bar when
	  do_render is false
	* base/utility.h: fix windows warning
	* base/tu_queue.h: small compile fix

2007-02-27  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_video_impl.(cpp,h),
	* gameswf/gameswf_action.cpp:
	netstream object is moved to gameswf/gameswf_classes folder
	* gameswf/gameswf_classes/as_netstream(cpp,h): added
	* gameswf/gameswf_netstream.cpp,h): removed
	* gameswf/win32/VC8/gameswf.vcproj: removed unused files & added new files
	

2007-02-27  Vitaly Alexeev <tishka92@yahoo.com>

	Key object listeners are being handled by movie_root
	* gameswf/gameswf.h: added get_root() to struct as_object_interface
	* gameswf/gameswf_root(cpp,h): removed notify_keypress_listeners()
	and updated notify_key_event()
	* gameswf/gameswf_classes/as_key(cpp,h): removed
	add_listener(), remove_listener(), clear_listener()

2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	Preparation for merge keypress_listeners & key listeners(from "as_key")
	* gameswf/gameswf_classes/as_key(cpp,h): added
	virtual	bool as_key::on_event(const event_id& id)
	* gameswf/gameswf_root.(cpp,h): replaced
	character* listener ==>	as_object_interface* listener
	* gameswf/gameswf.h: added